fixe positioning to align-self: flex-end on .remaining-characters

--- a/css/components/form.css
+++ b/css/components/form.css
@@ -40,7 +40,7 @@
 
 .remaining-characters {
   margin: 0 0 1em 0;
-  align-self: flex-start;
+  align-self: flex-end;
 }
 
 .newTag {
